Fix Safari single-line end truncation with resetWrapText mixin

--- a/packages/charts/src/components/_mixins.scss
+++ b/packages/charts/src/components/_mixins.scss
@@ -8,6 +8,13 @@
   min-width: 1px;
 }
 
+@mixin resetWrapText {
+  overflow-wrap: initial;
+  word-wrap: initial;
+  word-break: initial;
+  hyphens: initial;
+}
+
 @mixin lineClamp($maxLines) {
   text-overflow: ellipsis;
   display: -webkit-box;
